# nebari-doctor-plugin

./: .gitignore  README.md  Working Notes.md  environment.yaml  pyproject.toml
.github/workflows/: release.yaml  test.yaml
experiments/: copy_text_to_system_clipboard.py  nebari_doctor_draft.py
experiments/agent_ask_follow_up/: agent_that_decides_to_ask_follow_up_questions_or_not.py  agent_that_decides_to_ask_follow_up_questions_or_not_via_tools.py
experiments/query_loki/: query.py
nebari_doctor/: __init__.py  __main__.py  agent.py  pod_logs.py  prompts.py  styling.py
nebari_doctor/tools/: get_nebari_config.py  get_nebari_docs.py  get_pod_logs.py  test_pod_logs.py
resources/: nebari-code-base.txt  nebari-docs.txt
tests/: conftest.py  test_agent.py  test_message_display.py  test_nebari_docs.py  test_styling.py  test_tool_wrapper.py  test_truncation.py  test_user_input.py
