[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nebari_doctor"]

[tool.hatch.metadata]  # TODO: Remove this once nebari dependency issues get worked out
allow-direct-references = true

[project]
name = "nebari_doctor"
version = "0.0.2"
dependencies = [
    "nebari @ git+https://github.com/nebari-dev/nebari.git@nebari_doctor",
    "pydantic_ai==0.0.23",
    "questionary==2.0.0",
    "rich==13.9.4",
    "markdown-it-py>=2.2.0",
    "pygments>=2.15.0",
    # Optional dependencies for clipboard functionality
    "pywin32; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "pytest",
    "pytest-mock",
]

[project.entry-points.nebari]
nebari-doctor = "nebari_doctor"

[tool.typos]
files.extend-exclude = ["tests/test_data/pod_logs.py", "resources/"]
